# taste_game2

./: CMakeLists.txt  README.md
docs/: Checkpoint1.md  Checkpoint2_plan.md  Checkpoint2_reflection.md  Checkpoint3_reflection.md  Implementation.md  display.txt  final_reflection.md
include/: Customer.h  Food.h  Game.h  Palate.h
src/: Customer.cpp  Food.cpp  Game.cpp  Main.cpp  Palate.cpp
tests/: test_features.cpp
